yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-model
  namespace: ml-model
spec:
  selector:
    matchLabels:
      app: ml-model
  replicas: 1
  template:
    metadata:
      labels:
        app: ml-model
    spec:
      containers:
      - name: ml-model
        image: @registryname@.azurecr.io/ml-model
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
