yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-model-svc
spec:
  selector:
    app: ml-model
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
