yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ml-model-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - ml-model.resgrouplocation.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: ml-model.resgrouplocation.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ml-model-svc
          servicePort: 12800
